--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsdoc",
-  "version": "3.3.0-beta3",
+  "version": "3.3.0",
   "revision": "1426697054695",
   "description": "An API documentation generator for JavaScript.",
   "keywords": [
