Add iconv-lite to package.json for support more encodings

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "strip-json-comments": "~1.0.2",
     "taffydb": "https://github.com/hegemonic/taffydb/tarball/7d100bcee0e997ee4977e273cdce60bd8933050e",
     "underscore": "~1.7.0",
-    "wrench": "~1.5.8"
+    "wrench": "~1.5.8",
+    "iconv-lite": ">0.4.2"
   },
   "devDependencies": {
     "eslint": "~0.13.0",
