--- a/.eslintrc
+++ b/.eslintrc
@@ -34,11 +34,13 @@
         "valid-typeof": 2,
 
         // Best practices
+        "accessor-pairs": 2,
         "block-scoped-var": 0,
         "complexity": 0, // TODO: enable
         "consistent-return": 2,
         "curly": [2, "all"],
         "default-case": 2,
+        "dot-location": [2, "property"],
         "dot-notation": 2,
         "eqeqeq": [2, "smart"],
         "guard-for-in": 2,
@@ -66,6 +68,7 @@
         "no-new-wrappers": 2,
         "no-octal": 2,
         "no-octal-escape": 2,
+        "no-param-reassign": 0,
         "no-process-env": 2,
         "no-proto": 2,
         "no-redeclare": 2,
@@ -109,6 +112,7 @@
         "no-sync": 0,
 
         // Stylistic issues
+        "binop-style": 0,
         "brace-style": 0, // TODO: enable with "stroustrup" (or "1tbsp" + lots of cleanup)
         "camelcase": 2,
         "comma-spacing": [2, {
@@ -124,10 +128,14 @@
             "beforeColon": false,
             "afterColon": true
         }],
+        "linebreak-style": 0,
+        "lines-around-comment": 0,
         "max-nested-callbacks": 0,
         "new-cap": 2,
         "new-parens": 2,
+        "newline-after-var": 0,
         "no-array-constructor": 2,
+        "no-continue": 0,
         "no-lonely-if": 2,
         "no-mixed-spaces-and-tabs": 2,
         "no-multiple-empty-lines": [2, {
@@ -140,8 +148,12 @@
         "no-ternary": 0,
         "no-trailing-spaces": 2,
         "no-underscore-dangle": 0,
+        "no-unneeded-ternary": 0,
         "no-wrap-func": 2,
+        "object-curly-spacing": 0,
         "one-var": 0,
+        "operator-assignment": 0,
+        "operator-linebreak": [2, "after"],
         "padded-blocks": [2, "never"],
         "quotes": [2, "single", "avoid-escape"],
         "quote-props": 0,
@@ -156,6 +168,12 @@
         "space-unary-ops": 2,
         "spaced-line-comment": [2, "always"],
         "wrap-regex": 0,
+
+        // ECMAScript 2015
+        "generator-star": 0,
+        "generator-star-spacing": 0,
+        "no-var": 0,
+        "object-shorthand": 0,
 
         // Legacy
         // TODO: consider enabling some of the `max-*` rules
