--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,7 @@
 
     "rules": {
         // Possible errors
-        "no-comma-dangle": 2,
+        "comma-dangle": 2,
         "no-cond-assign": 2,
         "no-console": 0,
         "no-constant-condition": 0,
@@ -14,7 +14,7 @@
         "no-debugger": 2,
         "no-dupe-keys": 2,
         "no-empty": 2,
-        "no-empty-class": 2,
+        "no-empty-character-class": 2,
         "no-ex-assign": 2,
         "no-extra-boolean-cast": 2,
         "no-extra-parens": 0,
@@ -86,9 +86,7 @@
         "yoda": 2,
 
         // Strict mode
-        "global-strict": 0,
-        "no-extra-strict": 2,
-        "strict": 2,
+        "strict": [2, "global"],
 
         // Variables
         "no-catch-shadow": 0,
@@ -143,13 +141,11 @@
         }],
         "no-nested-ternary": 2,
         "no-new-object": 2,
-        "no-space-before-semi": 2,
         "no-spaced-func": 2,
         "no-ternary": 0,
         "no-trailing-spaces": 2,
         "no-underscore-dangle": 0,
         "no-unneeded-ternary": 0,
-        "no-wrap-func": 2,
         "object-curly-spacing": 0,
         "one-var": 0,
         "operator-assignment": 0,
@@ -158,6 +154,7 @@
         "quotes": [2, "single", "avoid-escape"],
         "quote-props": 0,
         "semi": [2, "always"],
+        "semi-spacing": 2,
         "sort-vars": 0,
         "space-after-keywords": [2, "always"],
         "space-before-blocks": [2, "always"],
@@ -166,7 +163,7 @@
         "space-infix-ops": 2,
         "space-return-throw-case": 2,
         "space-unary-ops": 2,
-        "spaced-line-comment": [2, "always"],
+        "spaced-comment": [2, "always"],
         "wrap-regex": 0,
 
         // ECMAScript 2015
