--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "catharsis": "~0.8.8",
     "escape-string-regexp": "~1.0.5",
     "espree": "~2.2.5",
+    "fs-extra": "~0.26.7",
     "js2xmlparser": "~1.0.0",
     "marked": "~0.3.6",
     "requizzle": "~0.2.1",
     "strip-json-comments": "~2.0.1",
-    "taffydb": "https://github.com/hegemonic/taffydb/tarball/7d100bcee0e997ee4977e273cdce60bd8933050e",
-    "underscore": "~1.8.3",
-    "fs-extra": "~0.26.7"
+    "taffydb": "2.6.2",
+    "underscore": "~1.8.3"
   },
   "devDependencies": {
     "gulp": "~3.9.1",
