--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "catharsis": "~0.8.8",
     "escape-string-regexp": "~1.0.5",
     "espree": "~3.1.7",
-    "fs-extra": "~0.30.0",
     "js2xmlparser": "~1.0.0",
+    "klaw": "~1.3.0",
     "marked": "~0.3.6",
+    "mkdirp": "~0.5.1",
     "requizzle": "~0.2.1",
     "strip-json-comments": "~2.0.1",
     "taffydb": "2.6.2",
