--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsdoc",
-  "version": "3.4.2",
+  "version": "3.4.3-dev",
   "revision": "1475518472967",
   "description": "An API documentation generator for JavaScript.",
   "keywords": [
