--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsdoc",
-  "version": "3.6.0-dev",
+  "version": "3.5.0",
   "revision": "1499653386419",
   "description": "An API documentation generator for JavaScript.",
   "keywords": [
