--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsdoc",
-  "version": "3.5.1",
+  "version": "3.5.2-dev",
   "revision": "1499710618011",
   "description": "An API documentation generator for JavaScript.",
   "keywords": [
