--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "underscore": "~1.8.3"
   },
   "devDependencies": {
+    "ajv": "~5.2.2",
     "gulp": "~3.9.1",
     "gulp-eslint": "~4.0.0",
     "gulp-json-editor": "~2.2.1",
-    "nyc": "~11.0.3",
-    "tv4": "https://github.com/hegemonic/tv4/tarball/own-properties"
+    "nyc": "~11.0.3"
   },
   "engines": {
     "node": ">=4.2.0"
