fix Node.js 4.x

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "js2xmlparser": "~3.0.0",
     "klaw": "~2.0.0",
     "markdown-it": "~8.3.1",
-    "markdown-it-anchor": "~4.0.0",
+    "markdown-it-named-headers": "~0.0.4",
     "marked": "~0.3.6",
     "mkdirp": "~0.5.1",
     "requizzle": "~0.2.1",
