--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jsdoc",
-  "version": "3.5.4-dev",
-  "revision": "1500000775574",
+  "version": "3.5.4",
+  "revision": "1501884327377",
   "description": "An API documentation generator for JavaScript.",
   "keywords": [
     "documentation",
