--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsdoc",
-  "version": "3.5.4",
+  "version": "3.5.5-dev",
   "revision": "1501884327377",
   "description": "An API documentation generator for JavaScript.",
   "keywords": [
