--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jsdoc",
-  "version": "3.5.5-dev",
-  "revision": "1501884327377",
+  "version": "3.5.5",
+  "revision": "1505357514942",
   "description": "An API documentation generator for JavaScript.",
   "keywords": [
     "documentation",
