--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsdoc",
-  "version": "3.5.5",
+  "version": "3.5.6-dev",
   "revision": "1505357514942",
   "description": "An API documentation generator for JavaScript.",
   "keywords": [
