--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jsdoc",
   "version": "3.6.0-dev",
-  "revision": "1500758109682",
+  "revision": "1547331889428",
   "description": "An API documentation generator for JavaScript.",
   "keywords": [
     "documentation",
@@ -13,30 +13,30 @@
     "url": "https://github.com/jsdoc3/jsdoc"
   },
   "dependencies": {
-    "babylon": "7.0.0-beta.19",
+    "babylon": "~7.0.0-beta.47",
     "bluebird": "~3.5.0",
     "catharsis": "~0.8.9",
     "escape-string-regexp": "~1.0.5",
     "js2xmlparser": "~3.0.0",
-    "klaw": "~2.0.0",
-    "markdown-it": "~8.3.1",
+    "klaw": "~3.0.0",
+    "markdown-it": "~8.4.2",
     "markdown-it-named-headers": "~0.0.4",
-    "marked": "~0.3.6",
+    "marked": "~0.6.0",
     "mkdirp": "~0.5.1",
     "requizzle": "~0.2.1",
     "strip-json-comments": "~2.0.1",
     "taffydb": "2.6.2",
-    "underscore": "~1.8.3"
+    "underscore": "~1.9.1"
   },
   "devDependencies": {
-    "ajv": "~5.2.2",
-    "gulp": "~3.9.1",
-    "gulp-eslint": "~4.0.0",
-    "gulp-json-editor": "~2.2.1",
-    "nyc": "~11.1.0"
+    "ajv": "~6.6.2",
+    "gulp": "~4.0.0",
+    "gulp-eslint": "~5.0.0",
+    "gulp-json-editor": "~2.5.0",
+    "nyc": "~13.1.0"
   },
   "engines": {
-    "node": ">=4.2.0"
+    "node": ">=8.15.0"
   },
   "scripts": {
     "test": "gulp lint; gulp test"
@@ -59,8 +59,10 @@
       "url": "https://github.com/jsdoc3/jsdoc/graphs/contributors"
     }
   ],
-  "maintainers": {
-    "name": "Jeff Williams",
-    "email": "jeffrey.l.williams@gmail.com"
-  }
+  "maintainers": [
+    {
+      "name": "Jeff Williams",
+      "email": "jeffrey.l.williams@gmail.com"
+    }
+  ]
 }
