--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@babel/parser": "~7.2.3",
+    "@jsdoc/logger": "file:./packages/jsdoc-logger",
     "@jsdoc/syntax": "file:./packages/jsdoc-syntax",
     "bluebird": "~3.5.0",
     "catharsis": "~0.8.9",
@@ -70,7 +71,7 @@
   ],
   "lerna": {
     "packages": [
-        "packages/*"
+      "packages/*"
     ],
     "version": "independent"
   }
