first pass at template overhaul and template API changes
API changes:
+ No more `jsdoc/template` module. Each JSDoc template uses whatever templating system it wants.
+ No more TaffyDB. Each template finds doclets however it wants. (TODO: Update `jsdoc/util/templateHelper` so none of its methods expect a TaffyDB object.)
+ Templates are now loaded with `require('my-template-name-here')`. The resulting object must include a `publish` method.
+ The `publish` method now takes two parameters: a `data` object with `doclets` and `tutorials` properties, and an `options` object. `data.doclets` is just an array.

Other notable changes:
+ No more `haruki` template.
+ Moved the `default` and `silent` templates to new packages.
+ The `.tmpl` files for the `default` template (now called `@jsdoc/template-original`) no longer use custom delimiters.

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "@babel/parser": "~7.2.3",
-    "@jsdoc/logger": "file:./packages/jsdoc-logger",
-    "@jsdoc/syntax": "file:./packages/jsdoc-syntax",
+    "@jsdoc/logger": "file:packages/jsdoc-logger",
+    "@jsdoc/syntax": "file:packages/jsdoc-syntax",
+    "@jsdoc/template-original": "file:packages/jsdoc-template-original",
+    "@jsdoc/template-silent": "file:packages/jsdoc-template-silent",
     "bluebird": "~3.5.0",
     "catharsis": "~0.8.9",
     "escape-string-regexp": "~1.0.5",
@@ -27,8 +29,7 @@
     "marked": "~0.6.0",
     "mkdirp": "~0.5.1",
     "requizzle": "~0.2.1",
-    "strip-json-comments": "~2.0.1",
-    "taffydb": "2.6.2"
+    "strip-json-comments": "~2.0.1"
   },
   "devDependencies": {
     "ajv": "~6.7.0",
@@ -46,11 +47,6 @@
   },
   "bin": {
     "jsdoc": "./jsdoc.js"
-  },
-  "greenkeeper": {
-    "ignore": [
-      "taffydb"
-    ]
   },
   "bugs": "https://github.com/jsdoc3/jsdoc/issues",
   "author": {
