change loading process for plugins and Markdown highlighters; remove `jsdoc/path`
We now simply use `require()` to load plugins and Markdown highlighters.

Note that `@jsdoc/util.path.commonPrefix`, unlike `jsdoc/path.commonPrefix`, does not append `path.sep` to the return value.

Includes other minor cleanup.

--- a/packages/jsdoc-template-original/package.json
+++ b/packages/jsdoc-template-original/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/jsdoc3/jsdoc#readme",
   "dependencies": {
+    "@jsdoc/logger": "file:../jsdoc-logger",
     "@jsdoc/util": "file:../jsdoc-util",
     "code-prettify": "^0.1.0",
     "color-themes-for-google-code-prettify": "^2.0.4",
