--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,48 @@
-# Development-related files
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Diagnostic reports (https://nodejs.org/api/report.html)
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Tool-specific files and directories
+.eslintcache
+.node_repl_history
+.npm
 .nyc_output
-.tern-port
+.tool-versions
 .vscode/
+.yarn-integrity
+bower_components/
 coverage/
-/node_modules/
+tmp/
+
+# node-waf configuration
+.lock-wscript
+
+# Compiled binary addons (https://nodejs.org/api/addons.html)
+build/Release
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Output of 'npm pack'
+*.tgz
+
+# dotenv environment variables file
+.env
+.env.test
 
 # User-specific files
 conf.json
