--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "escape-string-regexp": "^2.0.0",
     "js2xmlparser": "^4.0.0",
     "klaw": "^3.0.0",
+    "lodash": "^4.17.11",
     "markdown-it": "^8.4.2",
     "markdown-it-anchor": "^5.0.2",
     "marked": "^0.6.2",
     "mkdirp": "^0.5.1",
     "requizzle": "^0.2.2",
     "strip-json-comments": "^3.0.1",
-    "taffydb": "2.6.2",
-    "underscore": "~1.9.1"
+    "taffydb": "2.6.2"
   },
   "devDependencies": {
     "ajv": "^6.10.0",
