use shared ESLint config

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "taffydb": "2.6.2"
   },
   "devDependencies": {
+    "@jsdoc/eslint-config": "^1.0.1",
     "ajv": "^6.10.2",
     "gulp": "^4.0.2",
     "gulp-eslint": "^6.0.0",
