--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -5,5 +5,7 @@
     "statusCheckVerify": true,
     "ignoreDeps": [
         "taffydb"
-    ]
+    ],
+    "rangeStrategy": "bump",
+    "updateTypes": "patch"
 }
