--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -6,5 +6,7 @@
     "ignoreDeps": [
         "taffydb"
     ],
+    "automerge": true,
+    "automergeType": "branch",
     "rangeStrategy": "bump"
 }
