--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@babel/parser": "^7.5.5",
+    "@jsdoc/core": "^0.1.1",
     "bluebird": "^3.5.5",
     "catharsis": "^0.8.11",
     "code-prettify": "^0.1.0",
