--- a/packages/jsdoc/package.json
+++ b/packages/jsdoc/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jsdoc",
   "private": true,
-  "version": "4.0.0-dev",
+  "version": "4.0.0-dev.0",
   "revision": "1569013511930",
   "description": "An API documentation generator for JavaScript.",
   "keywords": [
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@babel/parser": "^7.6.0",
-    "@jsdoc/core": "^0.1.3",
+    "@jsdoc/core": "^0.1.4",
     "bluebird": "^3.5.5",
     "catharsis": "^0.8.11",
     "code-prettify": "^0.1.0",
