chore: update deps

--- a/packages/jsdoc/package.json
+++ b/packages/jsdoc/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "@babel/parser": "^7.7.5",
-    "@jsdoc/core": "^0.2.0",
+    "@jsdoc/cli": "^0.1.0",
+    "@jsdoc/core": "^0.2.1",
     "bluebird": "^3.7.2",
     "catharsis": "^0.8.11",
     "code-prettify": "^0.1.0",
