chore: require Node.js >=10.18.0
BREAKING CHANGE: All packages now require Node.js 10.18.0 or later.

--- a/packages/jsdoc-cli/package.json
+++ b/packages/jsdoc-cli/package.json
@@ -28,5 +28,8 @@
     "strip-bom": "^4.0.0",
     "yargs-parser": "^16.1.0"
   },
+  "engines": {
+    "node": ">=10.18.0"
+  },
   "gitHead": "a595f7f2a525f32da9a0498a027667af3d938158"
 }
