--- a/packages/jsdoc-core/package.json
+++ b/packages/jsdoc-core/package.json
@@ -29,5 +29,8 @@
     "strip-bom": "^4.0.0",
     "strip-json-comments": "^3.0.1"
   },
+  "engines": {
+    "node": ">=10.18.0"
+  },
   "gitHead": "a595f7f2a525f32da9a0498a027667af3d938158"
 }
