--- a/packages/jsdoc-eslint-config/package.json
+++ b/packages/jsdoc-eslint-config/package.json
@@ -26,5 +26,8 @@
   "bugs": {
     "url": "https://github.com/jsdoc/jsdoc/issues"
   },
+  "engines": {
+    "node": ">=10.18.0"
+  },
   "gitHead": "81a824eb0968851f836fc6069376d0337775f9ba"
 }
