refactor: extract `jsdoc/name` to `@jsdoc/core.name`; rename methods/enums
BREAKING CHANGE: `jsdoc/name` is gone; its replacement, `@jsdoc/core.name`, has different method/enum names.

--- a/packages/jsdoc-core/package.json
+++ b/packages/jsdoc-core/package.json
@@ -23,6 +23,8 @@
   },
   "dependencies": {
     "cosmiconfig": "^6.0.0",
+    "escape-string-regexp": "^2.0.0",
+    "lodash": "^4.17.15",
     "strip-bom": "^4.0.0",
     "strip-json-comments": "^3.0.1"
   },
