--- a/packages/jsdoc-cli/package.json
+++ b/packages/jsdoc-cli/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@jsdoc/core": "^0.3.0",
+    "@jsdoc/util": "^0.2.0",
     "lodash": "^4.17.15",
     "ow": "^0.16.0",
     "strip-bom": "^4.0.0",
