Add option to add external links to source code

--- a/packages/jsdoc/conf.json.EXAMPLE
+++ b/packages/jsdoc/conf.json.EXAMPLE
@@ -11,7 +11,10 @@
         "cleverLinks": false,
         "monospaceLinks": false,
         "default": {
-            "outputSourceFiles": true
+            "outputSourceFiles": false,
+            "externalSourceLinks": {
+                "urlPrefix": "https://github.com/org/repo/blob/master/src/"
+            }
         }
     }
 }
