--- a/packages/jsdoc/package.json
+++ b/packages/jsdoc/package.json
@@ -18,6 +18,7 @@
     "@jsdoc/cli": "^0.2.5",
     "@jsdoc/core": "^0.4.0",
     "@jsdoc/parse": "^0.1.0",
+    "@jsdoc/tag": "^0.0.1",
     "@jsdoc/util": "^0.2.4",
     "bluebird": "^3.7.2",
     "catharsis": "^0.9.0",
