--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jsdoc",
-  "version": "3.6.6",
-  "revision": "1600568714547",
+  "version": "3.6.7",
+  "revision": "1621041894903",
   "description": "An API documentation generator for JavaScript.",
   "keywords": [
     "documentation",
@@ -56,6 +56,7 @@
   },
   "contributors": [
     {
+      "name": "The JSDoc Contributors",
       "url": "https://github.com/jsdoc/jsdoc/graphs/contributors"
     }
   ],
