--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "gulp": "^4.0.2",
-    "gulp-eslint": "^6.0.0",
+    "gulp-eslint7": "^0.3.2",
     "gulp-prettier": "^4.0.0",
     "jasmine": "^3.9.0",
     "jasmine-console-reporter": "^3.1.0",
