--- a/packages/jsdoc-core/package.json
+++ b/packages/jsdoc-core/package.json
@@ -26,7 +26,8 @@
     "escape-string-regexp": "^4.0.0",
     "lodash": "^4.17.21",
     "strip-bom": "^4.0.0",
-    "strip-json-comments": "^3.1.1"
+    "strip-json-comments": "^3.1.1",
+    "yaioc": "^1.10.0"
   },
   "engines": {
     "node": ">=v14.17.6"
