--- a/packages/jsdoc-core/package.json
+++ b/packages/jsdoc-core/package.json
@@ -22,12 +22,12 @@
     "url": "https://github.com/jsdoc/jsdoc/issues"
   },
   "dependencies": {
+    "bottlejs": "^2.0.0",
     "cosmiconfig": "^7.0.1",
     "escape-string-regexp": "^4.0.0",
     "lodash": "^4.17.21",
     "strip-bom": "^4.0.0",
-    "strip-json-comments": "^3.1.1",
-    "yaioc": "^1.10.0"
+    "strip-json-comments": "^3.1.1"
   },
   "engines": {
     "node": ">=v14.17.6"
