:heavy_plus_sign: to avoid erroring with a missing dep

--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
   "scripts": {
     "preinstall": "npx npm-force-resolutions",
     "test": "gulp"
+  },
+  "dependencies": {
+    "yargs-parser": "^21.0.0"
   }
 }
