fix installation error when installing via npm (#1970)
When you publish a package to npm, the package-lock.json file isn't published. Unfortunately, npm-force-resolutions fails if package-lock.json isn't present, so if you tried to install JSDoc via npm, the preinstall script errored out.

We now use force-resolutions, a replacement for npm-force-resolutions that doesn't have this issue.

--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "node": ">=8.15.0"
   },
   "scripts": {
-    "preinstall": "npx npm-force-resolutions",
+    "preinstall": "npx force-resolutions",
     "test": "gulp lint; gulp test"
   },
   "bin": {
