--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-prettier": "^4.0.0",
     "jasmine": "^3.99.0",
     "jasmine-console-reporter": "^3.1.0",
+    "js-green-licenses": "^3.0.1",
     "klaw-sync": "^6.0.0",
     "lerna": "^4.0.0",
     "mock-fs": "^5.1.2",
