--- a/packages/jsdoc-parse/package.json
+++ b/packages/jsdoc-parse/package.json
@@ -21,6 +21,10 @@
   "bugs": {
     "url": "https://github.com/jsdoc/jsdoc/issues"
   },
+  "dependencies": {
+    "@jsdoc/core": "^0.4.1",
+    "@jsdoc/util": "^0.2.5"
+  },
   "engines": {
     "node": ">=v16.17.0"
   }
