--- a/packages/jsdoc-parse/package.json
+++ b/packages/jsdoc-parse/package.json
@@ -22,8 +22,10 @@
     "url": "https://github.com/jsdoc/jsdoc/issues"
   },
   "dependencies": {
+    "@babel/parser": "^7.19.1",
     "@jsdoc/core": "^0.4.1",
-    "@jsdoc/util": "^0.2.5"
+    "@jsdoc/util": "^0.2.5",
+    "lodash": "^4.17.21"
   },
   "engines": {
     "node": ">=v16.17.0"
