fix(jsdoc-salty): replace Object.hasOwn() shim
The old shim had a ton of dependencies, one of which triggered an ESLint bug that caused linting to fail: https://github.com/eslint/eslint/issues/14686

--- a/packages/jsdoc-salty/package.json
+++ b/packages/jsdoc-salty/package.json
@@ -22,8 +22,7 @@
     "url": "https://github.com/jsdoc/jsdoc/issues"
   },
   "dependencies": {
-    "lodash": "^4.17.21",
-    "object.hasown": "^1.1.1"
+    "lodash": "^4.17.21"
   },
   "engines": {
     "node": ">=v12.0.0"
