fix: tell Renovate not to bump Node.js versions
per https://github.com/renovatebot/config-help/issues/81

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -4,5 +4,11 @@
   "ignoreDeps": ["taffydb"],
   "automerge": true,
   "automergeType": "branch",
-  "rangeStrategy": "bump"
+  "rangeStrategy": "bump",
+  "packageRules": [
+    {
+      "packageNames": ["node"],
+      "enabled": false
+    }
+  ]
 }
