--- a/.editorconfig
+++ b/.editorconfig
@@ -3,10 +3,10 @@ charset = utf-8
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[package.json]
-indent_style = space
-indent_size = 2
-
 [{**/*.js,**/*.css,**/*.json}]
 indent_style = space
 indent_size = 4
+
+[package.json,**/*.md]
+indent_style = space
+indent_size = 2
