--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@babel/parser": "^7.9.4",
+    "@jsdoc/salty": "^0.2.1",
     "@types/markdown-it": "^12.2.3",
     "bluebird": "^3.7.2",
     "catharsis": "^0.9.0",
@@ -26,7 +27,6 @@
     "mkdirp": "^1.0.4",
     "requizzle": "^0.2.3",
     "strip-json-comments": "^3.1.0",
-    "taffydb": "2.6.2",
     "underscore": "~1.13.2"
   },
   "devDependencies": {
@@ -36,16 +36,6 @@
     "gulp-json-editor": "^2.5.6",
     "nyc": "^15.1.0"
   },
-  "resolutions": {
-    "ansi-regex": "5.0.1",
-    "fsevents": "2.3.2",
-    "glob-parent": "6.0.2",
-    "ini": "1.3.6",
-    "set-value": "4.0.1",
-    "tar": "6.1.11",
-    "trim-newlines": "4.0.2",
-    "trim-off-newlines": "1.0.3"
-  },
   "engines": {
     "node": ">=12.0.0"
   },
@@ -54,11 +44,6 @@
   },
   "bin": {
     "jsdoc": "./jsdoc.js"
-  },
-  "greenkeeper": {
-    "ignore": [
-      "taffydb"
-    ]
   },
   "bugs": "https://github.com/jsdoc/jsdoc/issues",
   "author": {
