--- a/packages/jsdoc/package.json
+++ b/packages/jsdoc/package.json
@@ -18,6 +18,7 @@
     "@jsdoc/cli": "^0.2.8",
     "@jsdoc/core": "^0.4.3",
     "@jsdoc/parse": "^0.1.4",
+    "@jsdoc/salty": "^0.2.1",
     "@jsdoc/tag": "^0.1.3",
     "@jsdoc/util": "^0.2.7",
     "bluebird": "^3.7.2",
@@ -30,8 +31,7 @@
     "open-sans-fonts": "^1.6.2",
     "requizzle": "^0.2.3",
     "strip-bom": "^4.0.0",
-    "strip-json-comments": "^3.1.1",
-    "taffydb": "2.6.2"
+    "strip-json-comments": "^3.1.1"
   },
   "engines": {
     "node": ">=v18.12.0"
