--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,11 +1,53 @@
+# Copyright 2020 the JSDoc Authors.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     https://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
 name: build
 on: [push, pull_request]
 jobs:
-  build:
+  license-check:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        # os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest]
+        node: [18]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node }}
+      - name: Check licensing
+        run: |
+          npm install
+          npm run license-check
+  lint:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        node: [18]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node }}
+      - name: Lint
+        run: |
+          npm install
+          npm run lint
+  test:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
         os: [ubuntu-latest]
         node: [14, 16, 18]
     steps:
@@ -13,9 +55,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
-      - name: Test and lint
+      - name: Test
         run: |
-          npm install -g gulp lerna
           npm install
-          lerna bootstrap
-          gulp
+          npm run test
