--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,5 +57,7 @@ jobs:
           node-version: ${{ matrix.node }}
       - name: Test
         run: |
+          npm install -g lerna
           npm install
+          lerna bootstrap
           npm run test
