chore: add missing property

--- a/packages/jsdoc/package.json
+++ b/packages/jsdoc/package.json
@@ -46,6 +46,7 @@
   },
   "contributors": [
     {
+      "name": "The JSDoc Authors",
       "url": "https://github.com/jsdoc/jsdoc/graphs/contributors"
     }
   ],
