--- a/packages/jsdoc-doclet/package.json
+++ b/packages/jsdoc-doclet/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/jsdoc/jsdoc/issues"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@jsdoc/util": "^0.2.7",
+    "strip-bom": "^4.0.0"
+  }
 }
