fix: resolve CI crankiness on Node.js v14

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,6 +57,7 @@ jobs:
           node-version: ${{ matrix.node }}
       - name: Test
         run: |
+          npm install -g npm
           npm install -g lerna
           npm install
           lerna bootstrap
