--- a/packages/jsdoc-ast/package.json
+++ b/packages/jsdoc-ast/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@jsdoc/parse",
-  "version": "0.1.6",
-  "description": "Code-parsing tools for JSDoc",
+  "name": "@jsdoc/ast",
+  "version": "0.0.1",
+  "description": "JSDoc tools for working with abstract syntax trees (ASTs).",
   "keywords": [
     "jsdoc"
   ],
