--- a/packages/jsdoc-doclet/package.json
+++ b/packages/jsdoc-doclet/package.json
@@ -22,7 +22,11 @@
     "url": "https://github.com/jsdoc/jsdoc/issues"
   },
   "dependencies": {
+    "@jsdoc/ast": "^0.0.1",
+    "@jsdoc/core": "^0.4.4",
+    "@jsdoc/tag": "^0.1.4",
     "@jsdoc/util": "^0.2.7",
+    "lodash": "^4.17.21",
     "strip-bom": "^4.0.0"
   }
 }
