--- a/packages/jsdoc-tag/package.json
+++ b/packages/jsdoc-tag/package.json
@@ -22,9 +22,11 @@
     "url": "https://github.com/jsdoc/jsdoc/issues"
   },
   "dependencies": {
+    "@jsdoc/ast": "^0.1.0",
     "@jsdoc/core": "^0.4.5",
     "@jsdoc/util": "^0.2.8",
     "catharsis": "^0.9.0",
+    "common-path-prefix": "^3.0.0",
     "lodash": "^4.17.21"
   },
   "engines": {
