--- a/packages/jsdoc/package.json
+++ b/packages/jsdoc/package.json
@@ -19,6 +19,7 @@
     "@jsdoc/cli": "^0.2.10",
     "@jsdoc/core": "^0.4.5",
     "@jsdoc/doclet": "^0.1.1",
+    "@jsdoc/parse": "^0.1.99",
     "@jsdoc/salty": "^0.2.3",
     "@jsdoc/tag": "^0.1.5",
     "@jsdoc/util": "^0.2.8",
